--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,7 @@ coverage
 
 .env
 .env.example
+.env.production
 license.txt
 exports
 .strapi
@@ -114,3 +115,4 @@ dist
 build
 .strapi-updater.json
 .strapi-cloud.json
+ecosystem.config.js
