--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A Strapi application",
   "scripts": {
     "develop": "strapi develop",
-    "start": "strapi start",
+    "start": "NODE_ENV=production  strapi start",
     "build": "strapi build",
     "strapi": "strapi",
     "deploy": "strapi deploy"
@@ -16,6 +16,7 @@
     "@strapi/plugin-users-permissions": "4.25.0",
     "@strapi/strapi": "4.25.0",
     "better-sqlite3": "8.6.0",
+    "mysql": "^2.18.1",
     "pg": "^8.12.0",
     "pg-connection-string": "^2.6.4",
     "react": "^18.0.0",
